cabal-version:       2.0
name:                AoC19
version:             0.0.0
synopsis:            See README for more info
description:         See README for more info
homepage:            https://github.com/peikos/AoC19
bug-reports:         https://github.com/peikos/AoC19/issues
license:             MIT
license-file:        LICENSE
author:              Brian van der Bijl
maintainer:          peikos@peikos.net
copyright:           2019 Brian van der Bijl
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.6.4

source-repository head
  type:                git
  location:            https://github.com/peikos/AoC19.git

library
  hs-source-dirs:      src
  exposed-modules:     Prelude, Computer
                     , First, Second, Third, Fourth, Fifth, Sixth, Seventh
                     , Eighth, Ninth, Tenth, Eleventh, Twelfth

  build-depends:       base-noprelude ^>= 4.12.0.0
                     , relude
                     , comonad
                     , text
                     , mtl
                     , deriving-compat
                     , recursion-schemes

  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wpartial-fields

  default-language:    Haskell2010

executable AoC19
  hs-source-dirs:      app
  main-is:             Main.hs

  build-depends:       base-noprelude ^>= 4.12.0.0
                     , AoC19
                     , relude

  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wpartial-fields

  default-language:    Haskell2010
