[package]
name = "AoC22"
version = "0.1.0"
edition = "2021"

[features]
timing = []
test = []
print = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "aoc"
path = "src/lib.rs"

[[bin]]
name = "aoc"
path = "src/main.rs"

[dependencies]
array_tool = "1.0.3"
inquire = "0.5.2"
itertools = "0.10.5"
ndarray = "0.15.6"
pathfinding = "4.0.0"
pest = "2.5.1"
pest_derive = "2.5.1"
recursion = "0.3.3"
